--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="src/components/App.js"></script>
+    <script src="src/App.tsx"></script>
   </body>
 </html>
